// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table accepts custom id 1`] = `
<div
  aria-labelledby="static-id"
  aria-live="polite"
  aria-relevant="additions"
  class="ds-c-table__wrapper"
  role="region"
>
  <table
    class="ds-c-table"
    role="table"
  >
    <caption
      class="ds-c-table__caption"
      id="static-id"
    >
      A great caption
    </caption>
  </table>
</div>
`;

exports[`Table applies responsive stacked table 1`] = `
<table
  class="ds-c-table ds-c-lg-table--stacked"
  role="table"
>
  <caption
    class="ds-c-table__caption"
  >
    A great caption
  </caption>
</table>
`;

exports[`Table applies scrollable prop to table 1`] = `
<div
  aria-labelledby="table-caption--8"
  aria-live="polite"
  aria-relevant="additions"
  class="ds-c-table__wrapper"
  role="region"
>
  <table
    class="ds-c-table"
    role="table"
  >
    <caption
      class="ds-c-table__caption"
      id="table-caption--8"
    >
      A great caption
    </caption>
  </table>
</div>
`;
